# ai2-screen-renamer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
ai2_renamer/: __init__.py  __main__.py  cli.py
tests/: test_cli.py  test_rename_screen.py
