[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "ai2-screen-renamer"
version = "0.1.0"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = []

[project.scripts]
ai2-screen-renamer = "ai2_renamer.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
